  Ctrl+Backspace now erases the last word, rather than inserting
  a non-printable character. See #299.
- Fixed an issue that caused the icons shown in the address bar
  dropdown to all be the same.
- In the manage bookmarks dialog, the treeview shown on the left
  wouldn't be updated correctly when pasting a bookmark folder
  that contained nested folders.

Misc:
- ARM64 builds are now available.
- When changing the default file manager setting (via Tools >
  Options > General > Default File Manager), Explorer++ will only
  be set/removed as the default file manager for the current
  user. Previously, Explorer++ was set as the default for all
  users.
  If you set Explorer++ as the default in a previous version,
  remove it as the default before you update, then change it back
  to the default after you've updated.
- The HTML Help (chm) documentation has been removed. The help
  menu item now simply links to the online documentation, from
  which a PDF can be generated, if needed.
- Improved crash handling. The updated handling means that the
  application should show an informational dialog more reliably
  when a crash occurs.
- Clicking on a bookmark now has the same effect as entering the
  bookmark path in the address bar and pressing enter. That means
  that the handling improvements mentioned above for the command
  line/address bar also apply to bookmarks. This also means that
  a bookmark to a file will now open that file and a bookmark can
  now contain a relative path.
- If a navigation fails, the current folder won't change.
  Previously, Explorer++ would seemingly open the folder, though
  display no items.
- The clipboard data generated when copying items is now
  retrieved from the shell, rather than being manually generated.
  That should mean copying works better, particularly in virtual
  folders. See #80 and #99.
- The data generated when dragging an item is now retrieved from
  the shell, which means drag and drop operations should work